--- a/estilos/style.css
+++ b/estilos/style.css
@@ -37,13 +37,16 @@ section#login {
     height: 500px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.450);
+
+    transition: width 0.2s, height 0.2s;
+    transition-timing-function: ease;
 }
 
 section#login > div#imagem {
     display: block;
-    background-color: #5f2c82 url(../imagens/montanha.jpg) no-repeat;
+    background: #5f2c82 url(../imagens/montanha.jpg) no-repeat;
     background-size: cover;
-    background-position: left bottom;
+    background-position: bottom center;
     height: 200px;
 }
 
