--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -37,12 +37,18 @@ no caso não vai ser pro celular, porque já fiz no style
         width: 940px;
     }
     section#login > div#imagem  {
-        float: left;
+        float: right;
         width: 50%;
         height: 100%;
     }
     section#login > div#formulario {
-        float: right;
+        float: left;
         width: 50%;
+    }
+    div#formulario > h1 {
+        font-size: 2em;
+    }
+    div#formulario > p {
+        font-size: 1.2em;
     }
 }
