--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -14,9 +14,11 @@ no caso não vai ser pro celular, porque já fiz no style
 @media screen and (min-width: 768px) and (max-width: 992px) {
     body {
         background-image: linear-gradient(to top, #49a09d, #5f2c82);
+        overflow: hidden;
     }
     section#login {
         width: 80vw;
+        height: 280px;
     }
     section#login > div#imagem {
         float: left;
@@ -32,9 +34,11 @@ no caso não vai ser pro celular, porque já fiz no style
 @media screen and (min-width: 992px) {
     body {
         background-image: linear-gradient(to top, #49a09d, #5f2c82);
+        overflow: hidden;
     }
     section#login {
         width: 940px;
+        height: 350px;
     }
     section#login > div#imagem  {
         float: right;
@@ -49,6 +53,7 @@ no caso não vai ser pro celular, porque já fiz no style
         font-size: 2em;
     }
     div#formulario > p {
-        font-size: 1.2em;
+        font-size: 1em;
+        margin: 20px 0px;
     }
 }
